force-app/main/default/objects/Global_New_Action_Flow_Route__mdt/Global_New_Action_Flow_Route__mdt.object-meta.xml
<CustomObject>
    <description>Maps object API names to flow API names for GlobalNewActionFlowOverride.</description>
    <label>Global New Action Flow Route</label>
    <pluralLabel>Global New Action Flow Routes</pluralLabel>
</CustomObject>