force-app/main/default/objects/Global_New_Action_Flow_Route__mdt/fields/Flow_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Api_Name__c</fullName>
    <description>API name of the Screen Flow to launch.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>