force-app/main/default/objects/Global_New_Action_Flow_Route__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the route is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>