force-app/main/default/objects/Global_New_Action_Flow_Route__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <description>API name of the object that triggers the route.</description>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>